--- a/bccore/build.gradle
+++ b/bccore/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version") {
         exclude group: 'org.jetbrains', module: 'annotations'
     }
+    implementation 'org.jetbrains.anko:anko-common:0.10.4'
 
     //Android library
     implementation ('com.android.support:appcompat-v7:26.1.0')
