--- a/bccore/build.gradle
+++ b/bccore/build.gradle
@@ -1,9 +1,8 @@
-
-
 buildscript {
 
+    ext.android_version = '27.1.1'
     ext.kotlin_version = '1.2.40'
-    ext.anko_version='0.10.4'
+    ext.anko_version = '0.10.4'
 
     repositories {
         google()
@@ -24,11 +23,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
 
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -57,7 +56,7 @@ dependencies {
 
     //Test
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation ('com.android.support.test:runner:1.0.1')
+    androidTestImplementation('com.android.support.test:runner:1.0.1')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -66,12 +65,14 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version") {
         exclude group: 'org.jetbrains', module: 'annotations'
     }
-    implementation 'org.jetbrains.anko:anko-common:0.10.4'
+    implementation("org.jetbrains.anko:anko-common:$anko_version") {
+        exclude group: 'org.jetbrains', module: 'annotations'
+    }
 
     //Android library
-    implementation ('com.android.support:appcompat-v7:26.1.0')
-    implementation ('com.google.android.gms:play-services-vision:12.0.0')
-    implementation ('com.android.support.constraint:constraint-layout:1.1.0')
+    implementation("com.android.support:appcompat-v7:$android_version")
+    implementation('com.google.android.gms:play-services-vision:12.0.0')
+    implementation('com.android.support.constraint:constraint-layout:1.1.0')
 
     //ReactiveX library
 //    implementation ('com.jakewharton.rxbinding2:rxbinding:2.1.1')
@@ -83,7 +84,7 @@ dependencies {
 //    implementation ('com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar')
 
     // Document at https://github.com/web3j/web3j
-    implementation ('org.web3j:core:3.3.1-android')
+    implementation('org.web3j:core:3.3.1-android')
 }
 
 kotlin {
