--- a/bccore/src/main/AndroidManifest.xml
+++ b/bccore/src/main/AndroidManifest.xml
@@ -34,7 +34,13 @@
         <activity android:name="com.bc.core.ui.barcodereader.NANJQrCodeActivity" />
 
         <!--Nfc Activity-->
-        <activity android:name="com.bc.core.ui.nfc.NANJNfcActivity" />
+        <activity android:name="com.bc.core.ui.nfc.NANJNfcActivity" >
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
 
         <!--meta vision barcode detection-->
         <meta-data
