--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -24,5 +24,8 @@
         <activity
             android:name=".WalletsActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".SendCoinActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
