--- a/bccore/build.gradle
+++ b/bccore/build.gradle
@@ -85,6 +85,7 @@ dependencies {
 
     // Document at https://github.com/web3j/web3j
     implementation('org.web3j:core:3.3.1-android')
+    implementation('com.android.volley:volley:1.1.0')
 
 //    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation ('com.google.code.gson:gson:2.8.4') { force = true}
