--- a/bccore/src/main/AndroidManifest.xml
+++ b/bccore/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application
-        android:largeHeap="true">
+    <application android:largeHeap="true">
 
         <!-- Barcode reader activity -->
         <activity android:name="com.bc.core.ui.barcodereader.NANJQrCodeActivity" />
