--- a/bccore/build.gradle
+++ b/bccore/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext.android_version = '27.1.1'
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.2.50'
     ext.anko_version = '0.10.4'
 
     repositories {
@@ -91,21 +91,12 @@ dependencies {
     implementation('com.google.android.gms:play-services-vision:15.0.1')
     implementation('com.android.support.constraint:constraint-layout:1.1.0')
 
-    //ReactiveX library
-//    implementation ('com.jakewharton.rxbinding2:rxbinding:2.1.1')
-//    implementation ('io.reactivex.rxjava2:rxandroid:2.0.2')
-//    implementation ('io.reactivex.rxjava2:rxjava:2.1.9')
-//    implementation ('io.reactivex.rxjava2:rxkotlin:2.1.0')
-//    implementation ('com.trello.rxlifecycle2:rxlifecycle-components:2.2.1')
-//    implementation ('com.trello.rxlifecycle2:rxlifecycle-kotlin:2.2.1')
-//    implementation ('com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar')
-
     // Document at https://github.com/web3j/web3j
     implementation('org.web3j:core:3.3.1-android')
     implementation('com.squareup.retrofit2:retrofit:2.4.0')
     implementation('com.squareup.retrofit2:adapter-rxjava2:2.4.0')
 
-    implementation ('com.google.code.gson:gson:2.8.4') { force = true}
+    implementation('com.google.code.gson:gson:2.8.4') { force = true }
 }
 
 kotlin {
@@ -116,4 +107,35 @@ kotlin {
 
 jacoco {
     toolVersion = "0.7.7.201606060606"
+}
+
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+}
+
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+    def fileFilter = [
+            '**/R.class',
+            '**/R$*.class',
+            '**/BuildConfig.*',
+            '**/Manifest*.*',
+            '**/*Test*.*',
+            'android/**/*.*',
+            '**/NANJWalletManager.*'
+    ]
+    def debugTree = fileTree(dir: "${buildDir}/intermediates/classes/debug", excludes: fileFilter)
+    def mainSrc = "${project.projectDir}/src/main/kotlin"
+
+    sourceDirectories = files([mainSrc])
+    classDirectories = files([debugTree])
+    executionData = fileTree(dir: "$buildDir", includes: [
+            "jacoco/testDebugUnitTest.exec",
+            "outputs/code-coverage/connected/*coverage.ec"
+    ])
 }
