--- a/bccore/build.gradle
+++ b/bccore/build.gradle
@@ -24,6 +24,12 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'jacoco'
 
+ext {
+    PUBLISH_GROUP_ID = 'com.nanj.coin'
+    PUBLISH_ARTIFACT_ID = 'sdk'
+    PUBLISH_VERSION = '1.0'
+}
+
 android {
     testOptions {
         unitTests.returnDefaultValues = true
@@ -61,6 +67,11 @@ android {
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
@@ -141,3 +152,4 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'crea
             "outputs/code-coverage/connected/*coverage.ec"
     ])
 }
+//apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
