--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -34,5 +34,8 @@
         <activity
             android:name=".SendCoinActivity"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".ChooseCoinTypeActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
