--- a/bccore/src/main/AndroidManifest.xml
+++ b/bccore/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bc.core">
+    package="com.nanjcoin.sdk">
 
     <!-- Camera permission -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -30,10 +30,10 @@
     <application android:largeHeap="true">
 
         <!-- Barcode reader activity -->
-        <activity android:name="com.bc.core.ui.barcodereader.NANJQrCodeActivity" />
+        <activity android:name="com.nanjcoin.sdk.ui.barcodereader.NANJQrCodeActivity" />
 
         <!--Nfc Activity-->
-        <activity android:name="com.bc.core.ui.nfc.NANJNfcActivity" >
+        <activity android:name="com.nanjcoin.sdk.ui.nfc.NANJNfcActivity" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
