--- a/bccore/build.gradle
+++ b/bccore/build.gradle
@@ -111,6 +111,8 @@ dependencies {
     api('com.squareup.retrofit2:retrofit:2.4.0')
     api('com.squareup.retrofit2:adapter-rxjava2:2.4.0')
     api('com.squareup.retrofit2:converter-gson:2.3.0')
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
 
     api('com.google.code.gson:gson:2.8.4') { force = true }
