--- a/example/build.gradle
+++ b/example/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.2'
+
+    //implementation 'com.facebook.stetho:stetho:1.5.0'
 }
