--- a/NANJ/src/main/AndroidManifest.xml
+++ b/NANJ/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bc.example">
+    package="com.nanjsdk.sample">
     <application
-        android:name=".NANJApplication"
+        android:name="com.nanjsdk.sample.NANJApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity"
+            android:name="com.nanjsdk.sample.SplashActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
@@ -26,19 +26,19 @@
             </intent-filter>-->
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.nanjsdk.sample.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".WalletsActivity"
+            android:name="com.nanjsdk.sample.WalletsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".SendCoinActivity"
+            android:name="com.nanjsdk.sample.SendCoinActivity"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".ChooseCoinTypeActivity"
+        <activity android:name="com.nanjsdk.sample.ChooseCoinTypeActivity"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".MoreDetailActivity"
+        <activity android:name="com.nanjsdk.sample.MoreDetailActivity"
             android:screenOrientation="portrait" />
     </application>
 </manifest>
