Fix bugs in Wallets and Transaction History

--- a/NANJ/build.gradle
+++ b/NANJ/build.gradle
@@ -28,7 +28,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.bc.example"
+        applicationId "com.nanjcoin.sample"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
