--- a/NANJ/src/main/AndroidManifest.xml
+++ b/NANJ/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nanjsdk.sample">
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
     <application
         android:name="com.nanjsdk.sample.NANJApplication"
         android:allowBackup="true"
@@ -17,13 +19,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <!--<intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:host="ext"
-                    android:pathPrefix="/"
-                    android:scheme="vnd.android.nfc" />
-            </intent-filter>-->
+
         </activity>
         <activity
             android:name="com.nanjsdk.sample.MainActivity"
@@ -40,5 +36,12 @@
 
         <activity android:name="com.nanjsdk.sample.MoreDetailActivity"
             android:screenOrientation="portrait" />
+        <activity android:name="com.nanjcoin.sdk.ui.nfc.NANJNfcActivity">
+            <intent-filter>
+                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
