--- a/NANJ/build.gradle
+++ b/NANJ/build.gradle
@@ -6,10 +6,6 @@ buildscript {
     ext.kotlin_version = '1.2.51'
     ext.anko_version = '0.10.4'
 //
-//    repositories {
-//        google()
-//        jcenter()
-//    }
 //    dependencies {
 //        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
@@ -59,22 +55,24 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    //implementation 'com.facebook.stetho:stetho:1.5.0'
     api 'com.google.android.gms:play-services-vision:15.0.1'
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    //NANJ SDK Dependencies
+    api 'io.reactivex.rxjava2:rxjava:2.1.9'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
+    api('org.web3j:core:3.3.1-android')
     api("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version") {
         exclude group: 'org.jetbrains', module: 'annotations'
     }
     api("org.jetbrains.anko:anko-common:$anko_version") {
         exclude group: 'org.jetbrains', module: 'annotations'
     }
-    api 'org.web3j:core:3.3.1-android'
-    implementation project(':NANJSDK')
+    api 'com.squareup.retrofit2:retrofit:2.4.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    api 'com.nanjcoin.sdk:NANJSDK:1.0.1'
 }
